Bump Kotlin, JDK, Compose, Gradle, etc.